<resources>
    <!--Localized Strings-->
    <string name="app_name">Can I Play Beachvolleyball?</string>
    <string name="temperatureLabel">Temperature: %1$s</string>
    <string name="precipLabel">Precip: %1$s</string>
    <string name="windspeedLabel">Wind Speed: %1$s </string>
    <string name="weatherUrl">https://api.darksky.net/forecast/3c6366cf207388e110d98eb55f634e53/</string>
    <string name="defaultLatLong">52.370216,4.895168</string>
    <string name="no_location">Could not get your location. Are you connected to the internet?</string>
    <string name="provider_disabled">location provider is disabled</string>
    <string name="settings">Settings</string>
    <string name="pref_niceweather_summary">I am a nice weather player</string>
    <string name="pref_niceweather_title">Nice Weather Only</string>
    <string name="pref_metric_summary">Celsius for temperature, m/s for wind speed</string>
    <string name="pref_metric_title">Metric Units</string>
    <string name="weather_lang">en</string>
    <string name="request_feature">Request Feature</string>
    <string name="locationLabel">Location: %1$s </string>

    <!--Non Localized strings-->
    <string name="unit_celsius">\u0020°C</string>
    <string name="unit_fahrenheit">\u0020°F</string>
    <string name="unit_meters_per_second">\u0020m/s</string>
    <string name="unit_miles_per_hour">\u0020mph</string>
    <string name="meters_per_second">\u0020m/s</string>
    <string name="lang_query"><![CDATA[&lang=]]></string>
    <string name="temperature_icon">temperature icon</string>
    <string name="temperature_too_low">The temperature is too low</string>
    <string name="wind_too_high">There is too much wind</string>
    <string name="precip_too_high">The precipitation is too high</string>
    <string name="precip_icon">precip_icon</string>
    <string name="query_celsius">\?units=si</string>
    <string name="ok">OK</string>
    <string name="check_icon">&#xf00c;</string>
    <string name="settings_metric_key">SETTINGS_METRIC</string>
    <string name="email">moumoudevelopment@gmail.com</string>
    <string name="mailto">mailto:</string>
    <string name="mail_body"><![CDATA[\?subject= Request BeachvolleyballWeather feature&body=I would like to request the following feature: ]]></string>
    <string name="settings_nice_weather_key">nice_weather</string>
    <string name="storage_parsing_error">Could not parse storage</string>
    <string name="about">About</string>
    <string name="dev_name">Dennis Mouwen</string>
    <string name="github_link">https://github.com/dennism1997</string>
    <string name="github_username">dennism1997</string>
    <string name="about_subtitle">Computer Science BSc Student</string>
    <string name="github">Github</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="support_development">Support Development</string>
    <string name="report_bug">Report bugs</string>
    <string name="report_bug_subtext">Report bugs or request new features</string>
    <string name="rate_app">Rate the app</string>
    <string name="send_mail_action">Send mail…</string>
    <string name="share_app_action_text">\\nLet me recommend you this application\\n\\nLink</string>
    <string name="share">Share</string>
    <string name="share_app">Share the app</string>

</resources>
